# debugger

./: .gitignore  index.html  nodemon.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  ui.config.json  ui.preset.js  vite.config.ts
src/: App.tsx  index.tsx  root.css  utils.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  socket.rs
src/components/: CodeArea.tsx  CodeEditor.tsx  Monaco.tsx  Output.tsx  ThemeSelect.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  icons.tsx  input.tsx  label.tsx  popover.tsx
src/lib/: connect.ts  fetchThemes.ts  invoke.ts  monaco.dark.json  socket.ts  utils.ts
