[package]
name = "unbound-debugger"
version = "1.0.0"
description = "Integrated Debugging Envionment designed with the developer in mind."
authors = ["Rosie"]
license = "GPL-3.0"
repository = "https://github.com/unbound-mod/debugger"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
