[package]
name = 'unbound-debugger'
version = '1.0.0'
description = 'Integrated Debugging Envionment designed with the developer in mind.'
authors = ['Rosie']
license = 'GPL-3.0'
repository = 'https://github.com/unbound-mod/debugger'
edition = '2021'

[build-dependencies]
tauri-build = { version = '1.5', features = [] }

[dependencies]
tauri = { version = '1.5', features = ['shell-open'] }
serde = { version = '1.0', features = ['derive'] }
tokio = { version = '1.35.1', features = ['full'] }
tokio-tungstenite = '0.21.0'
serde_json = '1.0'
lazy_static = '1.4.0'
futures-channel = '0.3.30'
futures-util = '0.3.30'
hostname = '0.3.1'
public-ip = '0.2.2'

[features]
custom-protocol = ['tauri/custom-protocol']
